crates/toml/tests/snapshots/invalid/inline-table/duplicate-key-02.stderr
TOML parse error at line 1, column 36
  |
1 | table1 = { table2.dupe = 1, table2.dupe = 2 }
  |                                    ^^^^
duplicate key
